--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>hello i am yck</title>
-</head>
-<body><h1>
-hello</h1>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
